# lantern

./: .air.toml  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  VERSION  docker-compose.yml  example.config.py  go.mod  go.sum  lantern-config-example.json  main.py  pyproject.toml
.github/workflows/: ci.yml  issues.yml  release-on-version-change.yml
client/: Dockerfile  Makefile  main.go
client/ui/components/button/: button.templ
client/ui/layouts/: base.templ
client/ui/modules/: themeswitcher.templ
client/ui/pages/: landing.templ
cmd/: main.go
cmd/lantern/: lantern.go
config/: config.go
core/: codeforces.go  leetcode.go  url.go
frontend/: .templui.json  Dockerfile  Makefile  main.go  tailwind.config.js
frontend/pages/: index.tmpl
internal/core/: io.go
internal/routes/question/: add-question.go
internal/server/: routes.go  server.go
internal/url/: codeforces.go  leetcode.go  url.go
lantern/: ascii_art.py  cli.py  core.py  favorites.py  filesystem.py  index.py  io.py  leetcode.py  logger.py  metadata.py  theme.py  tui.py  update.py  utils.py
routes/: questions.go
tests/: test_filesystem.py  test_leetcode.py  test_utils.py
